# virtual-mcp

./: .gitignore  README.md
k8s/: 00-mcp-server-everything.yaml  01-mcp-website-fetcher.yaml  02-gateway.yaml  03-virtual-mcp-backend.yaml  04-httproute.yaml  05-my-mcp-server.yaml
mcp/my-mcp-server/: .env.example  .gitignore  Dockerfile  README.md  mcp.yaml  pyproject.toml
mcp/my-mcp-server/src/: main.py
mcp/my-mcp-server/src/core/: __init__.py  server.py  utils.py
mcp/my-mcp-server/src/tools/: __init__.py  add_number.py  echo.py  sum.py
mcp/my-mcp-server/tests/: test_server.py  test_tools.py
